fixed: scrollbar

--- a/index.css
+++ b/index.css
@@ -5,14 +5,11 @@
 .body {
   background-color: black;
   margin: 0;
-  position: relative;
-  height: 100vh;
-  width: 100vw;
+  padding: 0;
   min-height: 100vh;
   min-width: 100vw;
-  max-height: 100vh;
-  max-width: 100vw;
   overflow: hidden;
+  position: fixed;
 }
 
 .snowflake {
